# core_rs

./: .gitignore  Cargo.toml  README.md
src/: credentials.rs  error.rs  http_client.rs  http_headers.rs  http_method.rs  http_request.rs  http_response.rs  http_status_code.rs  http_url.rs  interceptor.rs  lib.rs
