[package]
name = "core-rs"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.5"
tokio = { version = "1.37", features = ["rt", "macros", "time"] }
serde_json = "1.0"
