[package]
name = "core_rs"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
description = "A library for a core http library for use with coinbase apis"
repository = "https://github.com/coinbase-samples/core_rs"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.5"
tokio = { version = "1.37", features = ["rt", "macros", "time"] }
serde_json = "1.0"
